# IMS

./: License.txt  README.md
Imtek/: AlgebraicSolver.m  AlgebraicSolver.nb  AreaCoordinates.m  AreaCoordinates.nb  Arnoldi.m  Arnoldi.nb  Assembler.m  Assembler.nb  BDF.m  BDF.nb  BackwardCompatability.m  BackwardCompatability.nb  BoundaryConditions.m  BoundaryConditions.nb  BuildDiamond.m  BuildDiamond.nb  CircuitElementLibrary.m  CircuitElementLibrary.nb  CoupledPDEs.m  CoupledPDEs.nb  Debug.m  Debug.nb  DomainElementLibrary.m  DomainElementLibrary.nb  ExactCover.m  ExactCover.nb  ExtendedTiming.m  FDMNavierStokes.m  FDMNavierStokes.nb  FEMFluidics.m  FEMFluidics.nb  FEMMechanics.m  FEMMechanics.nb  FEMOperators.m  FEMOperators.nb  FEPlot.m  FEPlot.nb  GeometricFDMSolver.m  GeometricFDMSolver.nb  Graph.m  (+84 more)
Imtek/Documentation/English/: BrowserCategories.m  BrowserIndex.nb  IMSContentsDocu.nb
Imtek/Documentation/English/ApplicationExamples/: GraphElementLibraryDocu.nb  MORArnoldiVTKDocu.nb  MathExport.vtk
Imtek/Documentation/English/ApplicationExamples/ElectricalCircuit/: CurrentControlledCurrentSourceDocu.nb  DiodeCharacteristicDocu.nb  FirstOrderHighPassFilterDocu.nb  SecondOrderLowPassFilterDocu.nb  TransformerDocu.nb  VoltageDividerDocu.nb  WheatstoneBridgeDocu.nb
Imtek/Documentation/English/ApplicationExamples/FEM/: AcousticsDocu.nb  AnemometerAnalysisDocu.nb  CompositeMaterials3DDocu.nb  CompositeMaterialsDocu.nb  CoupledPDEFEMMiniDocu.nb  ElectroChemicalReactionsDocu.nb  FEMMiniExample1DDocu.nb  (+8 more)
Imtek/Documentation/English/Interfaces/: AnsysDocu.nb  AnsysEmatDocu.nb  AnsysRecordsDocu.nb  COMSOLDocu.nb  EasyMeshDocu.nb  EasymeshPlottingDocu.nb  HDLExportDocu.nb  MathLibDevCon2003Docu.nb  MifferDocu.nb  Ply2Docu.nb  QHullInterfaceDocu.nb  Read3dsDocu.nb  TetgenInterfaceDocu.nb  TriangleInterfaceDocu.nb  VTKDocu.nb
Imtek/Documentation/English/Introduction/: CitingIMSDocu.nb  ContributorsDocu.nb  DesignPhilosophyDocu.nb  IntroImtekDocu.nb  LicenseDocu.nb
Imtek/Foreign/: debugger.m
Imtek/FrontEnd/Palettes/: FontColor.nb  MakeInitCell.nb  MatrixInputPalette.nb  QuitKernel.nb  ShortLong.nb
Imtek/IMSData/ApplicationExamples/FEM/: AnemometerMesh.d  AnemometerMesh.e  AnemometerMesh.n  AnemometerMesh.s  cylinder.1.ele  cylinder.1.node  cylinder.1.poly  cylinder.poly  heptode.ele  heptode.nod
Imtek/IMSData/DatabaseResources/: ImtekMaterials.m
Imtek/IMSData/DatabaseResources/ImtekMaterials/: ImtekMaterials.lck  ImtekMaterials.properties  ImtekMaterials.script
Imtek/IMSData/GameTheory/: puzzle2
Imtek/IMSData/GraphMeshes/: AnsysElement.lis  AnsysNode.lis  EasyMeshExample.d  EasyMeshExample.e  EasyMeshExample.n  EasyMeshExample.s
Imtek/IMSData/Interfaces/ANSYS/: ReadAnsysBinaryExample.emat  ReadAnsysBinaryExample.full
Imtek/IMSData/Interfaces/COMSOL/: comsolExampleData1D.txt
Imtek/IMSData/Interfaces/Ply2/: doraemon.ply2
Imtek/IMSData/Interfaces/tetgen/: gear.stl  injectionForm.stl
Imtek/IMSData/Interfaces/triangle/: triangleUnitDomain.poly  triangleo2UnitDomain.1.ele  triangleo2UnitDomain.1.node
Imtek/IMSData/ModelOrderReduction/: MOR_MatC  MOR_MatD  MOR_MatK  MOR_dirichlet  MOR_elist.txt  MOR_load  MOR_nodelist.txt  MOR_reorder
Imtek/IMSData/Post4MOR/: gyro.B  gyro.C  gyro.C.names  gyro.K  gyro.M  gyro.harmonic  gyro.harmonic.names  gyro.transient  gyro.transient.names  thruster.B  thruster.C  thruster.C.names  thruster.E  thruster.transient  thruster.transient.names
Imtek/IMSData/SECM/: smal_d_10_rg_10.elm  smal_d_10_rg_10.nod
Imtek/Interfaces/: Ansys.m  Ansys.nb  COMSOL.m  COMSOL.nb  EasyMesh.m  EasyMesh.nb  EasymeshPlotting.m  EasymeshPlotting.nb  HDLExport.m  HDLExport.nb  Miffer.m  Ply2.m  Ply2.nb  QHullInterface.m  QHullInterface.nb  Read3ds.m  Read3ds.nb  TetgenInterface.m  TetgenInterface.nb  TriangleInterface.m  TriangleInterface.nb  VTK.m  VTK.nb
Imtek/Interfaces/Ansys/AnsysEmat/: AnsysEmat.cpp  AnsysEmat.tm  makefile
Imtek/Interfaces/Ansys/AnsysRecords/: AnsysRecords.cpp  AnsysRecords.tm  makefile
Imtek/Interfaces/MathLib/ATLAS/: AUTHORS  Makefile.am  Makefile.in  README  config.status  configure  configure.ac
Imtek/Interfaces/MathLib/ATLAS/autom4te.cache/: output.0  requests  traces.0
Imtek/Interfaces/MathLib/ATLAS/src/: DGETRF.c  DGETRF.tm  DGETRFtm.c  Makefile  Makefile.am  Makefile.in  atLUSolve.c  atLUSolve.tm  atLUSolvetm.c  config.h  config.h.in  maToMa.c  maToMa.tm  maToMatm.c
Imtek/Interfaces/MathLib/Quadpack/: quadpack.nb
Imtek/SimulationTools/: SECM.m  SECM.nb
(+69 files in other folders)
